istio/001-expose-echo/echo-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo-virtualservice
spec:
  hosts:
  - "echo.service.local"
  gateways:
  - echo-gateway
  http:
  - match:
    - uri:
        prefix: /echo
    route:
    - destination:
        port:
          number: 8080
        host: echo-service
